[AI CZ] ORBIT UI: Fixed details alignment

--- a/foundations_ui_orbit/src/scss/views/model-management-details.scss
+++ b/foundations_ui_orbit/src/scss/views/model-management-details.scss
@@ -25,7 +25,7 @@
 .model-management-details-entrypoints-container {
   display: inline-table;
   width: 25%;
-  margin: 5px;
+  margin: 0px 0px 0px 5px;
 }
 
 .model-management-details-entrypoint {
